--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,22 +1,22 @@
 [color]
 
 bg = #f9f5d7
-fg = #3c3836
+fg = #282828
 ac = #076678
 mf = #d5c4a1
- 
+
 trans = #00000000
-white = #FFFFFF
-black = #000000
+white = #fff
+black = #000
 
 ;; bg/fg extras
 background = #f9f5d7
-bg0 = #f9f5d7
+bg0 = #fbf1c7
 bg1 = #ebdbb2
 bg2 = #d5c4a1
 bg3 = #bdae93
 bg4 = #a89984
-foreground = #3c3836
+foreground = #282828
 fg0 = #282828
 fg1 = #3c3836
 fg2 = #504945
@@ -24,7 +24,7 @@ fg3 = #665c54
 fg4 = #7c6f64
 
 ;; Full palette with xrdb refs
-color0 =  #f9f5d7
+color0 =  #fbf1c7
 color1 =  #cc241d
 color2 =  #98971a
 color3 =  #d79921
@@ -44,15 +44,15 @@ color16 = #d65d0e
 color17 = #af3a03
 
 ;; Full palette with named colors
-red = #cc241d
-green = #98971a
-yellow = #d79921
-blue = #458588
-purple = #b16286
-aqua = #689d6a
-dark-gray = #7c6f64
-light-gray = #928374
-dark-red = #9d0006
+red =  #cc241d
+green =  #98971a
+yellow =  #d79921
+blue =  #458588
+purple =  #b16286
+aqua =  #689d6a
+dark-gray =  #7c6f64
+light-gray =  #928374
+dark-red =  #9d0006
 dark-green = #79740e
 dark-yellow = #b57614
 dark-blue = #076678
