--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -4,7 +4,7 @@ index-sort = true
 format = <label-state> <label-mode>
 label-mode = %mode%
 label-mode-padding = 0
-label-mode-background = #e60053
+label-mode-background = ${color.bg}
 label-focused = %index%
 label-focused-foreground = ${color.bg}
 label-focused-background = ${color.fg}
@@ -70,8 +70,8 @@ type = internal/pulseaudio
 use-ui-max = true
 interval = 5
 format-volume = <ramp-volume> <label-volume>
-label-muted =  Muted
-label-muted-foreground = #666
+label-muted =  M
+label-muted-foreground = ${color.red}
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
