--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -339,6 +339,7 @@ map gc cd ~/code
 map gC cd ~/.config
 map gd cd ~/dbx
 map gD cd ~/dwn
+map gb cd ~/code/webdev-books
 map ge cd /etc
 map gh cd ~
 map gl cd -r .
