--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,7 +57,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 set -s escape-time 0
 
 # enable mouse
-set -g mouse on
+# set -g mouse on
 
 # set window base to 1
 set -g base-index 1
