--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,8 @@ unbind '"' # horiz split
 
 # set easier split keys
 # remember: split type is direction of the cut, not stack
-bind v split-window -h -c "#{pane_current_path}"
-bind h split-window -v -c "#{pane_current_path}"
+bind s split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
 
 # easier pane navigation with nvim awareness
 # bind -n C-H select-pane -L
@@ -42,8 +42,8 @@ bind n command-prompt "rename-window '%%'"
 bind w new-window -c "#{pane_current_path}"
 
 # use Alt+j/k to move to prev/next windows
-bind -n M-j previous-window
-bind -n M-k next-window
+bind j previous-window
+bind k next-window
 
 # set up copy mode to be vim style
 unbind -T copy-mode-vi Space; # default begin-selection
