--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -338,6 +338,7 @@ map }     traverse
 map gc cd ~/code
 map gC cd ~/.config
 map gd cd ~/dbx
+map ga cd ~/dbxlong
 map gD cd ~/dwn
 map gb cd ~/code/webdev-books
 map ge cd /etc
