Fixing monitor orientation

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,47 +1,47 @@
 [color]
 
-bg = #1d2021
-fg = #fbf1c7
-ac = #83a598
-mf = #504945
+bg = #f9f5d7
+fg = #282828
+ac = #076678
+mf = #d5c4a1
 
 trans = #00000000
 white = #fff
 black = #000
 
 ;; bg/fg extras
-background = #1d2021
-bg0 = #282828
-bg1 = #3c3836
-bg2 = #504945
-bg3 = #665c54
-bg4 = #7c6f64
-foreground = #fbf1c7
-fg0 = #fbf1c7
-fg1 = #ebdbb2
-fg2 = #d5c4a1
-fg3 = #bdae93
-fg4 = #a89984
+background = #f9f5d7
+bg0 = #fbf1c7
+bg1 = #ebdbb2
+bg2 = #d5c4a1
+bg3 = #bdae93
+bg4 = #a89984
+foreground = #282828
+fg0 = #282828
+fg1 = #3c3836
+fg2 = #504945
+fg3 = #665c54
+fg4 = #7c6f64
 
 ;; Full palette with xrdb refs
-color0 =  #282828
+color0 =  #fbf1c7
 color1 =  #cc241d
 color2 =  #98971a
 color3 =  #d79921
 color4 =  #458588
 color5 =  #b16286
 color6 =  #689d6a
-color7 =  #a89984
+color7 =  #7c6f64
 color8 =  #928374
-color9 =  #fb4934
-color10 = #b8bb26
-color11 = #fabd2f
-color12 = #83a598
-color13 = #d3869b
-color14 = #8ec07c
-color15 = #ebdbb2
+color9 =  #9d0006
+color10 = #79740e
+color11 = #b57614
+color12 = #076678
+color13 = #8f3f71
+color14 = #427b58
+color15 = #3c3836
 color16 = #d65d0e
-color17 = #fe8019
+color17 = #af3a03
 
 ;; Full palette with named colors
 red =  #cc241d
@@ -50,13 +50,13 @@ yellow =  #d79921
 blue =  #458588
 purple =  #b16286
 aqua =  #689d6a
-dark-gray =  #a89984
+dark-gray =  #7c6f64
 light-gray =  #928374
-dark-red =  #fb4934
-dark-green = #b8bb26
-dark-yellow = #fabd2f
-dark-blue = #83a598
-dark-purple = #d3869b
-dark-aqua = #8ec07c
+dark-red =  #9d0006
+dark-green = #79740e
+dark-yellow = #b57614
+dark-blue = #076678
+dark-purple = #8f3f71
+dark-aqua = #427b58
 orange = #d65d0e
-dark-orange = #fe8019
+dark-orange = #af3a03
