--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,25 +1,25 @@
 # gruvbox colors for kitty
 
-background #1d2021
-selection_background #fbf1c7
+background #f9f5d7
+selection_background #282828
 
-foreground #fbf1c7
-selection_foreground #1d2021
+foreground #282828
+selection_foreground #f9f5d7
 
-active_tab_foreground #1d2021
-active_tab_background #d3869b
+active_tab_foreground #f9f5d7
+active_tab_background #8f3f71
 
-inactive_tab_foreground #fbf1c7
-inactive_tab_background #504945
+inactive_tab_foreground #282828
+inactive_tab_background #d5c4a1
 
 cursor #d65d0e
-cursor_text_color #1d2021
+cursor_text_color #f9f5d7
 
 url_color #458588
 url_style curly
 
 # bg hard contrast
-color0 #282828
+color0 #fbf1c7
 
 # red
 color1 #cc241d
@@ -40,34 +40,34 @@ color5 #b16286
 color6 #689d6a
 
 # dark gray
-color7 #a89984
+color7 #7c6f64
 
 # light gray
 color8 #928374
 
 # dark red
-color9 #fb4934
+color9 #9d0006
 
 # dark green
-color10 #b8bb26
+color10 #79740e
 
 # dark yellow
-color11 #fabd2f
+color11 #b57614
 
 # dark blue
-color12 #83a598
+color12 #076678
 
 # dark purple
-color13 #d3869b
+color13 #8f3f71
 
 # dark aqua
-color14 #8ec07c
+color14 #427b58
 
 # fg
-color15 #ebdbb2
+color15 #3c3836
 
 # orange
 color16 #d65d0e
 
 # dark orange
-color17 #fe8019
+color17 #af3a03
